hphp/hack/test/typecheck/generics_restrictions/explicit_generics.php.exp
File "explicit_generics.php", line 7, characters 3-11:
Illegal wildcard (`_`): generic type parameter `T` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 4, characters 35-35:
  Definition is here
File "explicit_generics.php", line 8, characters 3-11:
Illegal wildcard (`_`): generic type parameter `T2` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 5, characters 39-40:
  Definition is here
File "explicit_generics.php", line 10, characters 16-16:
Illegal wildcard (`_`): generic type parameter `T2` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 5, characters 39-40:
  Definition is here
File "explicit_generics.php", line 11, characters 20-20:
Illegal wildcard (`_`): generic type parameter `T2` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 5, characters 39-40:
  Definition is here
File "explicit_generics.php", line 12, characters 42-42:
Illegal wildcard (`_`): generic type parameter `Tout` must be specified explicitly (Typing[4347])
  File "soundness.hhi", line 31, characters 78-81:
  Definition is here
File "explicit_generics.php", line 19, characters 12-16:
Illegal wildcard (`_`): generic type parameter `T` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 16, characters 40-40:
  Definition is here
File "explicit_generics.php", line 20, characters 12-16:
Illegal wildcard (`_`): generic type parameter `T2` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 17, characters 44-45:
  Definition is here
File "explicit_generics.php", line 22, characters 21-21:
Illegal wildcard (`_`): generic type parameter `T2` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 17, characters 44-45:
  Definition is here
File "explicit_generics.php", line 23, characters 25-25:
Illegal wildcard (`_`): generic type parameter `T2` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 17, characters 44-45:
  Definition is here
File "explicit_generics.php", line 31, characters 13-13:
Illegal wildcard (`_`): generic type parameter `T` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 27, characters 24-24:
  Definition is here
File "explicit_generics.php", line 32, characters 15-15:
Illegal wildcard (`_`): generic type parameter `T` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 27, characters 24-24:
  Definition is here
File "explicit_generics.php", line 33, characters 19-19:
Illegal wildcard (`_`): generic type parameter `T` must be specified explicitly (Typing[4347])
  File "explicit_generics.php", line 27, characters 24-24:
  Definition is here
